--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "18.0.10",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
+    "framer-motion": "^8.1.7",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
