--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "@bradgarropy/next-google-analytics": "^1.0.2",
-    "@bradgarropy/next-seo": "^1.2.0",
     "@next/font": "13.1.1",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
@@ -19,6 +18,7 @@
     "eslint-config-next": "13.1.1",
     "framer-motion": "^8.1.7",
     "next": "13.1.1",
+    "next-seo": "^5.15.0",
     "nprogress": "^0.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
