--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "house",
+  "name": "lndev.me",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,23 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@bradgarropy/next-google-analytics": "^1.0.2",
-    "@next/font": "13.1.1",
-    "@types/node": "18.11.18",
-    "@types/react": "18.0.26",
-    "@types/react-dom": "18.0.10",
-    "eslint": "8.30.0",
-    "eslint-config-next": "13.1.1",
-    "framer-motion": "^8.1.7",
-    "next": "13.1.1",
-    "next-seo": "^5.15.0",
-    "nprogress": "^0.2.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "sass": "^1.57.1",
-    "typescript": "4.9.4"
+    "next": "13.5.6",
+    "react": "^18",
+    "react-dom": "^18",
+    "sass": "^1.69.5"
   },
   "devDependencies": {
-    "@types/nprogress": "^0.2.0"
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10",
+    "eslint": "^8",
+    "eslint-config-next": "13.5.6",
+    "postcss": "^8",
+    "tailwindcss": "^3",
+    "typescript": "^5"
   }
 }
